Bug: name the tool's own argument in the category lookup refusal